# CCTV_Camera_Project

./: .gitignore  CameraLibrary.sln  README.md
CameraLibrary/: CalcAvarage.cpp  CalcAvarage.h  CameraFunctions.cpp  CameraFunctions.h  CameraLibrary.cpp  CameraLibrary.vcxproj  Detection.h  Includes.h  Program.cpp  YOLOdetection.cpp  YOLOdetection.h
CameraProject/: CameraProject.vcxproj  Milestone1.cpp  Milestone1_2.cpp  Program.cpp  Try.cpp  test.cpp
SmartEye/: .gitignore  CMakeLists.txt
SmartEye/CodeFiles/: CMakeLists.txt  CalcAvarage.cpp  CalcAvarage.h  CameraFunctions.cpp  Detection.h  Logger.cpp  Logger.h  Program.cpp  YOLOdetection.cpp
SmartEye/Tests/: CMakeLists.txt  SameFrame_Test.cpp  Test.cpp  calcAverageTest.cpp
SmartEye/backend/: CMakeLists.txt  backend.cpp  backend.h
SmartEye/camera/: CMakeLists.txt  camera.cpp  cameraClient.cpp  cameraClient.h
SmartEye/proto/: CMakeLists.txt  imageProto.proto
SmartEye/smart_eye/: CMakeLists.txt  YOLOdetection.cpp  YOLOdetection.h  backendThread.cpp  backendThread.h  calcAvarage.cpp  calcAvarage.h  cameraFunctions.cpp  cameraFunctions.h  cameraThread.cpp  cameraThread.h  detection.h  logger.cpp  program.cpp  threadSafeQueue.cpp  threadSafeQueue.h
SmartEye/smart_eye/sqlite_files/: CMakeLists.txt
SmartEye/sqlite_files/: CMakeLists.txt
SmartEye/tests/: CMakeLists.txt  calcAverageTest.cpp  sameFrameTest.cpp  threadSafeQueueTest.cpp
camera/: .gitignore  CMakeLists.txt
camera/sqlite_files/: CMakeLists.txt
camera/src/: CMakeLists.txt  CalcAvarage.cpp  CalcAvarage.h  Detection.h  Program.cpp  Test.cpp  YOLOdetection.h
